--- a/pynb/02-preliminary-results.ipynb
+++ b/pynb/02-preliminary-results.ipynb
@@ -59,7 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cost_paths = list(data_results_dir.glob(\"**/weighted_cost.txt\"))"
+    "cost_paths = list(data_results_dir.glob(\"**/real_cost.txt\"))"
    ]
   },
   {
@@ -135,8 +135,8 @@
        "      <td>bico</td>\n",
        "      <td>10</td>\n",
        "      <td>17</td>\n",
-       "      <td>3.084367e+11</td>\n",
-       "      <td>1.185021e+09</td>\n",
+       "      <td>3.403564e+11</td>\n",
+       "      <td>8.802695e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -144,8 +144,8 @@
        "      <td>bico</td>\n",
        "      <td>20</td>\n",
        "      <td>17</td>\n",
-       "      <td>1.841479e+11</td>\n",
-       "      <td>1.089146e+09</td>\n",
+       "      <td>2.047561e+11</td>\n",
+       "      <td>8.510785e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -153,8 +153,8 @@
        "      <td>bico</td>\n",
        "      <td>30</td>\n",
        "      <td>17</td>\n",
-       "      <td>1.411079e+11</td>\n",
-       "      <td>8.787436e+08</td>\n",
+       "      <td>1.555837e+11</td>\n",
+       "      <td>7.019566e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -162,8 +162,8 @@
        "      <td>bico</td>\n",
        "      <td>40</td>\n",
        "      <td>17</td>\n",
-       "      <td>1.192191e+11</td>\n",
-       "      <td>6.130174e+08</td>\n",
+       "      <td>1.297791e+11</td>\n",
+       "      <td>5.480104e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -171,8 +171,8 @@
        "      <td>bico</td>\n",
        "      <td>50</td>\n",
        "      <td>17</td>\n",
-       "      <td>1.059928e+11</td>\n",
-       "      <td>4.747725e+08</td>\n",
+       "      <td>1.137582e+11</td>\n",
+       "      <td>4.555466e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -180,8 +180,8 @@
        "      <td>group-sampling</td>\n",
        "      <td>10</td>\n",
        "      <td>17</td>\n",
-       "      <td>3.258126e+11</td>\n",
-       "      <td>2.529468e+09</td>\n",
+       "      <td>3.415869e+11</td>\n",
+       "      <td>1.078958e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -189,8 +189,8 @@
        "      <td>group-sampling</td>\n",
        "      <td>20</td>\n",
        "      <td>16</td>\n",
-       "      <td>1.973509e+11</td>\n",
-       "      <td>1.932491e+09</td>\n",
+       "      <td>2.055935e+11</td>\n",
+       "      <td>1.221846e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -198,8 +198,8 @@
        "      <td>group-sampling</td>\n",
        "      <td>30</td>\n",
        "      <td>16</td>\n",
-       "      <td>1.497885e+11</td>\n",
-       "      <td>9.067089e+08</td>\n",
+       "      <td>1.556877e+11</td>\n",
+       "      <td>8.543948e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -207,8 +207,8 @@
        "      <td>group-sampling</td>\n",
        "      <td>40</td>\n",
        "      <td>16</td>\n",
-       "      <td>1.252322e+11</td>\n",
-       "      <td>8.220971e+08</td>\n",
+       "      <td>1.303204e+11</td>\n",
+       "      <td>7.256397e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -216,8 +216,8 @@
        "      <td>group-sampling</td>\n",
        "      <td>50</td>\n",
        "      <td>16</td>\n",
-       "      <td>1.099062e+11</td>\n",
-       "      <td>5.178493e+08</td>\n",
+       "      <td>1.142005e+11</td>\n",
+       "      <td>4.149013e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -225,8 +225,8 @@
        "      <td>sensitivity-sampling</td>\n",
        "      <td>10</td>\n",
        "      <td>16</td>\n",
-       "      <td>3.344059e+11</td>\n",
-       "      <td>1.981485e+09</td>\n",
+       "      <td>3.419419e+11</td>\n",
+       "      <td>9.509502e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -234,8 +234,8 @@
        "      <td>sensitivity-sampling</td>\n",
        "      <td>20</td>\n",
        "      <td>16</td>\n",
-       "      <td>2.017049e+11</td>\n",
-       "      <td>1.837283e+09</td>\n",
+       "      <td>2.057139e+11</td>\n",
+       "      <td>9.665341e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
@@ -243,8 +243,8 @@
        "      <td>sensitivity-sampling</td>\n",
        "      <td>30</td>\n",
        "      <td>16</td>\n",
-       "      <td>1.538143e+11</td>\n",
-       "      <td>1.621327e+09</td>\n",
+       "      <td>1.568697e+11</td>\n",
+       "      <td>1.038072e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
@@ -252,8 +252,8 @@
        "      <td>sensitivity-sampling</td>\n",
        "      <td>40</td>\n",
        "      <td>16</td>\n",
-       "      <td>1.281822e+11</td>\n",
-       "      <td>9.254186e+08</td>\n",
+       "      <td>1.306866e+11</td>\n",
+       "      <td>5.900194e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
@@ -261,8 +261,8 @@
        "      <td>sensitivity-sampling</td>\n",
        "      <td>50</td>\n",
        "      <td>16</td>\n",
-       "      <td>1.124228e+11</td>\n",
-       "      <td>7.286939e+08</td>\n",
+       "      <td>1.144453e+11</td>\n",
+       "      <td>4.834973e+08</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -270,38 +270,38 @@
       ],
       "text/plain": [
        "      dataset             algorithm   k  cost_count     cost_mean  \\\n",
-       "0   covertype                  bico  10          17  3.084367e+11   \n",
-       "1   covertype                  bico  20          17  1.841479e+11   \n",
-       "2   covertype                  bico  30          17  1.411079e+11   \n",
-       "3   covertype                  bico  40          17  1.192191e+11   \n",
-       "4   covertype                  bico  50          17  1.059928e+11   \n",
-       "5   covertype        group-sampling  10          17  3.258126e+11   \n",
-       "6   covertype        group-sampling  20          16  1.973509e+11   \n",
-       "7   covertype        group-sampling  30          16  1.497885e+11   \n",
-       "8   covertype        group-sampling  40          16  1.252322e+11   \n",
-       "9   covertype        group-sampling  50          16  1.099062e+11   \n",
-       "10  covertype  sensitivity-sampling  10          16  3.344059e+11   \n",
-       "11  covertype  sensitivity-sampling  20          16  2.017049e+11   \n",
-       "12  covertype  sensitivity-sampling  30          16  1.538143e+11   \n",
-       "13  covertype  sensitivity-sampling  40          16  1.281822e+11   \n",
-       "14  covertype  sensitivity-sampling  50          16  1.124228e+11   \n",
+       "0   covertype                  bico  10          17  3.403564e+11   \n",
+       "1   covertype                  bico  20          17  2.047561e+11   \n",
+       "2   covertype                  bico  30          17  1.555837e+11   \n",
+       "3   covertype                  bico  40          17  1.297791e+11   \n",
+       "4   covertype                  bico  50          17  1.137582e+11   \n",
+       "5   covertype        group-sampling  10          17  3.415869e+11   \n",
+       "6   covertype        group-sampling  20          16  2.055935e+11   \n",
+       "7   covertype        group-sampling  30          16  1.556877e+11   \n",
+       "8   covertype        group-sampling  40          16  1.303204e+11   \n",
+       "9   covertype        group-sampling  50          16  1.142005e+11   \n",
+       "10  covertype  sensitivity-sampling  10          16  3.419419e+11   \n",
+       "11  covertype  sensitivity-sampling  20          16  2.057139e+11   \n",
+       "12  covertype  sensitivity-sampling  30          16  1.568697e+11   \n",
+       "13  covertype  sensitivity-sampling  40          16  1.306866e+11   \n",
+       "14  covertype  sensitivity-sampling  50          16  1.144453e+11   \n",
        "\n",
        "        cost_std  \n",
-       "0   1.185021e+09  \n",
-       "1   1.089146e+09  \n",
-       "2   8.787436e+08  \n",
-       "3   6.130174e+08  \n",
-       "4   4.747725e+08  \n",
-       "5   2.529468e+09  \n",
-       "6   1.932491e+09  \n",
-       "7   9.067089e+08  \n",
-       "8   8.220971e+08  \n",
-       "9   5.178493e+08  \n",
-       "10  1.981485e+09  \n",
-       "11  1.837283e+09  \n",
-       "12  1.621327e+09  \n",
-       "13  9.254186e+08  \n",
-       "14  7.286939e+08  "
+       "0   8.802695e+08  \n",
+       "1   8.510785e+08  \n",
+       "2   7.019566e+08  \n",
+       "3   5.480104e+08  \n",
+       "4   4.555466e+08  \n",
+       "5   1.078958e+09  \n",
+       "6   1.221846e+09  \n",
+       "7   8.543948e+08  \n",
+       "8   7.256397e+08  \n",
+       "9   4.149013e+08  \n",
+       "10  9.509502e+08  \n",
+       "11  9.665341e+08  \n",
+       "12  1.038072e+09  \n",
+       "13  5.900194e+08  \n",
+       "14  4.834973e+08  "
       ]
      },
      "execution_count": 7,
@@ -328,11 +328,11 @@
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_2cd82_row0_col0, #T_2cd82_row0_col1, #T_2cd82_row0_col2, #T_2cd82_row0_col3, #T_2cd82_row0_col4 {\n",
+       "#T_a7668_row0_col0, #T_a7668_row0_col1, #T_a7668_row0_col2, #T_a7668_row0_col3, #T_a7668_row0_col4 {\n",
        "  background-color: lightgreen;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_2cd82_\">\n",
+       "<table id=\"T_a7668_\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"index_name level0\" >k</th>\n",
@@ -353,34 +353,34 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_2cd82_level0_row0\" class=\"row_heading level0 row0\" >bico</th>\n",
-       "      <td id=\"T_2cd82_row0_col0\" class=\"data row0 col0\" >308,436,725,384</td>\n",
-       "      <td id=\"T_2cd82_row0_col1\" class=\"data row0 col1\" >184,147,913,356</td>\n",
-       "      <td id=\"T_2cd82_row0_col2\" class=\"data row0 col2\" >141,107,926,238</td>\n",
-       "      <td id=\"T_2cd82_row0_col3\" class=\"data row0 col3\" >119,219,073,957</td>\n",
-       "      <td id=\"T_2cd82_row0_col4\" class=\"data row0 col4\" >105,992,823,416</td>\n",
+       "      <th id=\"T_a7668_level0_row0\" class=\"row_heading level0 row0\" >bico</th>\n",
+       "      <td id=\"T_a7668_row0_col0\" class=\"data row0 col0\" >340,356,397,367</td>\n",
+       "      <td id=\"T_a7668_row0_col1\" class=\"data row0 col1\" >204,756,088,985</td>\n",
+       "      <td id=\"T_a7668_row0_col2\" class=\"data row0 col2\" >155,583,659,845</td>\n",
+       "      <td id=\"T_a7668_row0_col3\" class=\"data row0 col3\" >129,779,084,264</td>\n",
+       "      <td id=\"T_a7668_row0_col4\" class=\"data row0 col4\" >113,758,223,618</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_2cd82_level0_row1\" class=\"row_heading level0 row1\" >group-sampling</th>\n",
-       "      <td id=\"T_2cd82_row1_col0\" class=\"data row1 col0\" >325,812,604,646</td>\n",
-       "      <td id=\"T_2cd82_row1_col1\" class=\"data row1 col1\" >197,350,906,928</td>\n",
-       "      <td id=\"T_2cd82_row1_col2\" class=\"data row1 col2\" >149,788,536,849</td>\n",
-       "      <td id=\"T_2cd82_row1_col3\" class=\"data row1 col3\" >125,232,163,925</td>\n",
-       "      <td id=\"T_2cd82_row1_col4\" class=\"data row1 col4\" >109,906,218,454</td>\n",
+       "      <th id=\"T_a7668_level0_row1\" class=\"row_heading level0 row1\" >group-sampling</th>\n",
+       "      <td id=\"T_a7668_row1_col0\" class=\"data row1 col0\" >341,586,874,766</td>\n",
+       "      <td id=\"T_a7668_row1_col1\" class=\"data row1 col1\" >205,593,548,611</td>\n",
+       "      <td id=\"T_a7668_row1_col2\" class=\"data row1 col2\" >155,687,737,778</td>\n",
+       "      <td id=\"T_a7668_row1_col3\" class=\"data row1 col3\" >130,320,415,498</td>\n",
+       "      <td id=\"T_a7668_row1_col4\" class=\"data row1 col4\" >114,200,520,047</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_2cd82_level0_row2\" class=\"row_heading level0 row2\" >sensitivity-sampling</th>\n",
-       "      <td id=\"T_2cd82_row2_col0\" class=\"data row2 col0\" >334,405,891,480</td>\n",
-       "      <td id=\"T_2cd82_row2_col1\" class=\"data row2 col1\" >201,704,900,579</td>\n",
-       "      <td id=\"T_2cd82_row2_col2\" class=\"data row2 col2\" >153,814,257,452</td>\n",
-       "      <td id=\"T_2cd82_row2_col3\" class=\"data row2 col3\" >128,182,175,570</td>\n",
-       "      <td id=\"T_2cd82_row2_col4\" class=\"data row2 col4\" >112,422,821,982</td>\n",
+       "      <th id=\"T_a7668_level0_row2\" class=\"row_heading level0 row2\" >sensitivity-sampling</th>\n",
+       "      <td id=\"T_a7668_row2_col0\" class=\"data row2 col0\" >341,941,912,665</td>\n",
+       "      <td id=\"T_a7668_row2_col1\" class=\"data row2 col1\" >205,713,943,963</td>\n",
+       "      <td id=\"T_a7668_row2_col2\" class=\"data row2 col2\" >156,869,713,956</td>\n",
+       "      <td id=\"T_a7668_row2_col3\" class=\"data row2 col3\" >130,686,613,536</td>\n",
+       "      <td id=\"T_a7668_row2_col4\" class=\"data row2 col4\" >114,445,298,276</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7f88720d86d0>"
+       "<pandas.io.formats.style.Styler at 0x7f9bd76ea1f0>"
       ]
      },
      "execution_count": 8,
@@ -403,11 +403,11 @@
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_4a5e9_row0_col0, #T_4a5e9_row0_col1, #T_4a5e9_row0_col2, #T_4a5e9_row0_col3, #T_4a5e9_row0_col4 {\n",
+       "#T_ad188_row0_col0, #T_ad188_row0_col1, #T_ad188_row0_col2, #T_ad188_row0_col3, #T_ad188_row1_col4 {\n",
        "  background-color: lightgreen;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_4a5e9_\">\n",
+       "<table id=\"T_ad188_\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"index_name level0\" >k</th>\n",
@@ -428,34 +428,34 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_4a5e9_level0_row0\" class=\"row_heading level0 row0\" >bico</th>\n",
-       "      <td id=\"T_4a5e9_row0_col0\" class=\"data row0 col0\" >1,185,021,232</td>\n",
-       "      <td id=\"T_4a5e9_row0_col1\" class=\"data row0 col1\" >1,089,145,752</td>\n",
-       "      <td id=\"T_4a5e9_row0_col2\" class=\"data row0 col2\" >878,743,582</td>\n",
-       "      <td id=\"T_4a5e9_row0_col3\" class=\"data row0 col3\" >613,017,419</td>\n",
-       "      <td id=\"T_4a5e9_row0_col4\" class=\"data row0 col4\" >474,772,510</td>\n",
+       "      <th id=\"T_ad188_level0_row0\" class=\"row_heading level0 row0\" >bico</th>\n",
+       "      <td id=\"T_ad188_row0_col0\" class=\"data row0 col0\" >880,269,512</td>\n",
+       "      <td id=\"T_ad188_row0_col1\" class=\"data row0 col1\" >851,078,533</td>\n",
+       "      <td id=\"T_ad188_row0_col2\" class=\"data row0 col2\" >701,956,614</td>\n",
+       "      <td id=\"T_ad188_row0_col3\" class=\"data row0 col3\" >548,010,439</td>\n",
+       "      <td id=\"T_ad188_row0_col4\" class=\"data row0 col4\" >455,546,612</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_4a5e9_level0_row1\" class=\"row_heading level0 row1\" >group-sampling</th>\n",
-       "      <td id=\"T_4a5e9_row1_col0\" class=\"data row1 col0\" >2,529,467,843</td>\n",
-       "      <td id=\"T_4a5e9_row1_col1\" class=\"data row1 col1\" >1,932,491,142</td>\n",
-       "      <td id=\"T_4a5e9_row1_col2\" class=\"data row1 col2\" >906,708,919</td>\n",
-       "      <td id=\"T_4a5e9_row1_col3\" class=\"data row1 col3\" >822,097,053</td>\n",
-       "      <td id=\"T_4a5e9_row1_col4\" class=\"data row1 col4\" >517,849,325</td>\n",
+       "      <th id=\"T_ad188_level0_row1\" class=\"row_heading level0 row1\" >group-sampling</th>\n",
+       "      <td id=\"T_ad188_row1_col0\" class=\"data row1 col0\" >1,078,957,534</td>\n",
+       "      <td id=\"T_ad188_row1_col1\" class=\"data row1 col1\" >1,221,845,989</td>\n",
+       "      <td id=\"T_ad188_row1_col2\" class=\"data row1 col2\" >854,394,816</td>\n",
+       "      <td id=\"T_ad188_row1_col3\" class=\"data row1 col3\" >725,639,744</td>\n",
+       "      <td id=\"T_ad188_row1_col4\" class=\"data row1 col4\" >414,901,295</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_4a5e9_level0_row2\" class=\"row_heading level0 row2\" >sensitivity-sampling</th>\n",
-       "      <td id=\"T_4a5e9_row2_col0\" class=\"data row2 col0\" >1,981,484,582</td>\n",
-       "      <td id=\"T_4a5e9_row2_col1\" class=\"data row2 col1\" >1,837,283,055</td>\n",
-       "      <td id=\"T_4a5e9_row2_col2\" class=\"data row2 col2\" >1,621,327,072</td>\n",
-       "      <td id=\"T_4a5e9_row2_col3\" class=\"data row2 col3\" >925,418,593</td>\n",
-       "      <td id=\"T_4a5e9_row2_col4\" class=\"data row2 col4\" >728,693,915</td>\n",
+       "      <th id=\"T_ad188_level0_row2\" class=\"row_heading level0 row2\" >sensitivity-sampling</th>\n",
+       "      <td id=\"T_ad188_row2_col0\" class=\"data row2 col0\" >950,950,177</td>\n",
+       "      <td id=\"T_ad188_row2_col1\" class=\"data row2 col1\" >966,534,069</td>\n",
+       "      <td id=\"T_ad188_row2_col2\" class=\"data row2 col2\" >1,038,071,758</td>\n",
+       "      <td id=\"T_ad188_row2_col3\" class=\"data row2 col3\" >590,019,443</td>\n",
+       "      <td id=\"T_ad188_row2_col4\" class=\"data row2 col4\" >483,497,299</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7f8872144400>"
+       "<pandas.io.formats.style.Styler at 0x7f9bd45f4a30>"
       ]
      },
      "execution_count": 9,
