Time SVD computation.

--- a/pynb/19-svd-enron.ipynb
+++ b/pynb/19-svd-enron.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "cb930fb9-f99b-46ae-9dc7-3d3096846c26",
    "metadata": {},
    "outputs": [],
@@ -22,6 +22,8 @@
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "\n",
+    "from timeit import default_timer as timer\n",
     "\n",
     "from scipy import linalg\n",
     "from scipy.sparse import linalg as sparse_linalg, issparse\n",
@@ -48,7 +50,7 @@
      "text": [
       "Loading BoW dataset from ../data/input/docword.enron.txt.gz\n",
       "Data shape: (39861, 28102)\n",
-      "Elapsed time: 18.31 secs\n"
+      "Elapsed time: 24.36 secs\n"
      ]
     }
    ],
@@ -59,17 +61,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "eda8bd50-ff6a-495c-8774-6f8cc6102aa1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVD computed in 4.3 minutes.\n"
+     ]
+    }
+   ],
    "source": [
-    "U, Sigma, VT = sparse_linalg.eigen.svds(A=X, which='LM', k=1000, solver='arpack')"
+    "start_time = timer()\n",
+    "U, Sigma, VT = sparse_linalg.eigen.svds(A=X, which='LM', k=1000, solver='arpack')\n",
+    "end_time = timer()\n",
+    "duration_sec = end_time - start_time\n",
+    "print(f\"SVD computed in {duration_sec/60:.1f} minutes.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "9691e4df-5b9c-440d-a660-bccba2695a5c",
    "metadata": {},
    "outputs": [],
