Do not persist figures to disk.

--- a/pynb/11-combined-results.ipynb
+++ b/pynb/11-combined-results.ipynb
@@ -2181,7 +2181,7 @@
     "        else:\n",
     "           ax.get_legend().remove()\n",
     "        \n",
-    "        fig.savefig(f\"figures/distortions-{dataset}.pdf\", bbox_inches=\"tight\")"
+    "        #fig.savefig(f\"figures/distortions-{dataset}.pdf\", bbox_inches=\"tight\")"
    ]
   },
   {
