--- a/pynb/27-updated-results.ipynb
+++ b/pynb/27-updated-results.ipynb
@@ -1152,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "id": "9be732e4-b944-4ab5-9b6e-1b8a33e1436c",
    "metadata": {},
    "outputs": [
@@ -1330,7 +1330,7 @@
        "[196 rows x 5 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1376,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "id": "01561e90-0a29-4f41-afc9-67e6c271bad7",
    "metadata": {
     "tags": []
@@ -1853,12 +1853,10 @@
       "    & 200 & 4.21 (0.296) & 3.35 (0.195) & 2.10 (0.065) \\\\\n",
       "    & 500 & 3.36 (0.429) & 2.81 (0.288) & 1.86 (0.105) \\\\\n",
       "\\bottomrule\n",
-      "\\caption{The effect of three solution generation methods on the distortions (see \\cref{sec:evaluation-procedure}). \n",
-      "We compared generating candidate solutions by running $k$-means++, randomly generating $k$ points inside\n",
-      "the convex hull (Random CH) and inside the minimum enclosing ball (Random MEB).\n",
-      "Our experiments show that the $k$-means++ method generates candidate solutions which consistently\n",
-      "lead to large distortions on all algorithms.}\n",
-      "\\label{tab:comparison-solution-generation}\n",
+      "\\caption{The effect of different solution generation approaches on the distortions (see \\cref{sec:candidate-solution-generation}).\n",
+      "The distortions are obtained by running BICO on the \\textit{Caltech} data set.\n",
+      "}\n",
+      "\\label{tab:comparison-solution-generation-caltech-bico}\n",
       "\\end{longtable}\n",
       "\n"
      ]
@@ -1897,15 +1895,15 @@
     "output = output.replace(\"k-\", \"$k$-\")\n",
     "output = output.replace(\" m \", \" $m$ \")\n",
     "\n",
-    "caption_text = \"\"\"\\caption{The effect of three solution generation methods on the distortions (see \\cref{sec:evaluation-procedure}). \n",
-    "We compared generating candidate solutions by running $k$-means++, randomly generating $k$ points inside\n",
-    "the convex hull (Random CH) and inside the minimum enclosing ball (Random MEB).\n",
-    "Our experiments show that the $k$-means++ method generates candidate solutions which consistently\n",
-    "lead to large distortions on all algorithms.}\"\"\"\n",
+    "caption_text = \"\"\"\\caption{The effect of different solution generation approaches on the distortions (see \\cref{sec:candidate-solution-generation}).\n",
+    "The distortions are obtained by running BICO on the \\\\textit{Caltech} data set.\n",
+    "}\"\"\"\n",
     "\n",
+    "\n",
+    "label_postfix = f\"{data_set.lower()}-{algorithm_name.lower()}\"\n",
     "end_texts = [\n",
     "    caption_text,\n",
-    "    r\"\\label{tab:comparison-solution-generation}\",\n",
+    "    r\"\\label{tab:comparison-solution-generation-\"+label_postfix+\"}\",\n",
     "    r\"\\end{longtable}\",\n",
     "]\n",
     "\n",
@@ -1914,9 +1912,143 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5e2f2414-605d-453b-a45c-a5eee4128260",
+   "metadata": {},
+   "source": [
+    "## Comparing Solution Generation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "90fbc90b-3997-4320-b198-2188ade1104d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_filtered = df_aggr_costs[df_aggr_costs.dataset.isin([\"Benchmark\", \"NYTimes+PCA\"]) == False].copy()\n",
+    "df_filtered = df_filtered.rename(columns={\n",
+    "    \"coreset_size_factor\": \"m\",\n",
+    "    \"distortion_mean\": \"KM\",\n",
+    "    \"distortion_synthetic2_mean\": \"CH\",\n",
+    "    \"distortion_synthetic_mean\": \"MEB\",\n",
+    "})\n",
+    "cols = [\"dataset\", \"algorithm\", \"k\", \"m\", \"KM\", \"CH\", \"MEB\"]\n",
+    "df_filtered = df_filtered[cols]\n",
+    "\n",
+    "df_max_distortions = df_filtered.groupby([\"dataset\", \"algorithm\"])[[\"KM\", \"CH\", \"MEB\"]].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "6523a897-32f3-446c-80c8-90d5113ef21f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{longtable}{llrrr}\n",
+      "\\toprule\n",
+      " Data set  & Algorithm     &        $k$-means++&        Random CH&       Random MEB\\\\\n",
+      "\\midrule\n",
+      "Caltech & BICO &   7.499068 &   4.800188 &   2.629218 \\\\\n",
+      "      & Group Sampling &   1.068441 &   1.035997 &   1.006828 \\\\\n",
+      "      & Ray Maker &   7.053856 &   5.442665 &   3.453930 \\\\\n",
+      "      & Sensitivity Sampling &   1.048977 &   1.016564 &   1.029646 \\\\\n",
+      "      & StreamKM++ &   1.202426 &   1.111698 &   1.012216 \\\\\n",
+      "\\midrule\n",
+      "Caltech+PCA & BICO &   2.862242 &   2.411732 &   1.825558 \\\\\n",
+      "      & Group Sampling &   1.058707 &   1.021386 &   1.007735 \\\\\n",
+      "      & Ray Maker &   2.941248 &   2.563131 &   2.053860 \\\\\n",
+      "      & Sensitivity Sampling &   1.040106 &   1.012539 &   1.032113 \\\\\n",
+      "      & StreamKM++ &   1.139141 &   1.073384 &   1.013089 \\\\\n",
+      "\\midrule\n",
+      "Census & BICO &   2.502564 &   1.441889 &   1.040356 \\\\\n",
+      "      & Group Sampling &   1.077525 &   1.032349 &   1.028025 \\\\\n",
+      "      & Ray Maker &   2.483973 &   1.633945 &   1.236878 \\\\\n",
+      "      & Sensitivity Sampling &   1.032978 &   1.088607 &   1.079925 \\\\\n",
+      "      & StreamKM++ &   1.127443 &   1.044656 &   1.003459 \\\\\n",
+      "\\midrule\n",
+      "Census+PCA & BICO &   2.454087 &   1.472404 &   1.030620 \\\\\n",
+      "      & Group Sampling &   1.070332 &   1.036615 &   1.031606 \\\\\n",
+      "      & Ray Maker &   2.456844 &   1.617594 &   1.234714 \\\\\n",
+      "      & Sensitivity Sampling &   1.036155 &   1.086034 &   1.083994 \\\\\n",
+      "      & StreamKM++ &   1.126928 &   1.042801 &   1.003570 \\\\\n",
+      "\\midrule\n",
+      "Covertype & BICO &   1.294620 &   1.146309 &   1.037080 \\\\\n",
+      "      & Group Sampling &   1.094779 &   1.041165 &   1.023978 \\\\\n",
+      "      & Ray Maker &   1.388141 &   1.227148 &   1.121157 \\\\\n",
+      "      & Sensitivity Sampling &   1.044575 &   1.115355 &   1.103073 \\\\\n",
+      "      & StreamKM++ &   1.048912 &   1.019965 &   1.004857 \\\\\n",
+      "\\midrule\n",
+      "Covertype+PCA & BICO &   1.292637 &   1.147499 &   1.037594 \\\\\n",
+      "      & Group Sampling &   1.097391 &   1.038144 &   1.023664 \\\\\n",
+      "      & Ray Maker &   1.385070 &   1.229436 &   1.122238 \\\\\n",
+      "      & Sensitivity Sampling &   1.039479 &   1.097699 &   1.092900 \\\\\n",
+      "      & StreamKM++ &   1.049769 &   1.022796 &   1.006932 \\\\\n",
+      "\\midrule\n",
+      "NYTimes & BICO &  35.319657 &  31.015943 &  28.932553 \\\\\n",
+      "      & Group Sampling &   1.089067 &   1.061821 &   1.033067 \\\\\n",
+      "      & Ray Maker &  28.373678 &  24.930933 &  19.520125 \\\\\n",
+      "      & Sensitivity Sampling &   1.050988 &   1.027549 &   1.012441 \\\\\n",
+      "      & StreamKM++ &   2.039047 &   1.861497 &   1.674643 \\\\\n",
+      "\\midrule\n",
+      "Tower & BICO &   1.199658 &   1.040606 &   1.005894 \\\\\n",
+      "      & Group Sampling &   1.113305 &   1.043449 &   1.030855 \\\\\n",
+      "      & Ray Maker &   1.490978 &   1.286890 &   1.234467 \\\\\n",
+      "      & Sensitivity Sampling &   1.044464 &   1.103949 &   1.075281 \\\\\n",
+      "      & StreamKM++ &   1.051491 &   1.009577 &   1.000630 \\\\\n",
+      "\\bottomrule\n",
+      "\\caption{The effect of different solution generation approaches on the distortions (see \\cref{sec:evaluation-procedure}).\n",
+      "The distortions are aggregated across different algorithms and data sets.\n",
+      "}\n",
+      "\\label{tab:comparison-solution-generation-all}\n",
+      "\\end{longtable}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "output = df_max_distortions.to_latex()\n",
+    "\n",
+    "output = output.replace(r\"\\begin{tabular}{llrrr}\", r\"\\begin{longtable}{llrrr}\")\n",
+    "\n",
+    "output = output.replace(r\"      &            &         KM &         CH &        MEB \\\\\", r\" Data set  & Algorithm     &         KM &         CH &        MEB \\\\\")\n",
+    "output = output.replace(r\"dataset & algorithm &            &            &            \\\\\", r\"\")\n",
+    "output = output.replace(r\" KM \", r\"$k$-means++\")\n",
+    "output = output.replace(r\" CH \", r\"Random CH\")\n",
+    "output = output.replace(r\" MEB \", r\"Random MEB\")\n",
+    "# output = output.replace(r\"\", r\"\")\n",
+    "\n",
+    "# output = output.replace(r\"\", r\"\")\n",
+    "\n",
+    "\n",
+    "output = re.sub(r\"( \\\\\\\\\\n)([A-Z])\", r\"\\1\\\\midrule\\n\\2\", output, flags=re.MULTILINE)\n",
+    "\n",
+    "caption_text = \"\"\"\\caption{The effect of different solution generation approaches on the distortions (see \\cref{sec:evaluation-procedure}).\n",
+    "The distortions are aggregated across different algorithms and data sets.\n",
+    "}\"\"\"\n",
+    "\n",
+    "end_texts = [\n",
+    "    caption_text,\n",
+    "    r\"\\label{tab:comparison-solution-generation-all}\",\n",
+    "    r\"\\end{longtable}\",\n",
+    "]\n",
+    "\n",
+    "output = output.replace(r\"\\end{tabular}\", \"\\n\".join(end_texts))\n",
+    "\n",
+    "# Remove empty lines\n",
+    "output = output.replace(\"\\n\\n\", \"\\n\")\n",
+    "    \n",
+    "print(output)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06ef3dc5-b163-442d-b6c6-8a39c6fc6c02",
+   "id": "39b3711c-b34a-48a8-bbe9-6942ef7a53d4",
    "metadata": {},
    "outputs": [],
    "source": []
