--- a/pynb/27-updated-results.ipynb
+++ b/pynb/27-updated-results.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "id": "8b031cb8-40e8-4bad-9099-68276c271e06",
    "metadata": {
     "tags": []
@@ -127,8 +127,10 @@
     "            \"real_cost_synthetic\": real_cost_synthetic,\n",
     "            \"coreset_cost_synthetic\": coreset_cost_synthetic,\n",
     "            \"distortion_synthetic\": distortion_synthetic,\n",
+    "            \"real_cost_synthetic2\": real_cost_synthetic2,\n",
+    "            \"coreset_cost_synthetic2\": coreset_cost_synthetic2,\n",
     "            \"distortion_synthetic2\": distortion_synthetic2,\n",
-    "            \"run_file_path\": str(run_file_path),\n",
+    "            # \"run_file_path\": str(run_file_path),\n",
     "        })\n",
     "    df_data = pd.DataFrame(costs)\n",
     "    return df_data.groupby([\"dataset\", \"algorithm\", \"k\", \"coreset_size\"], as_index=False).head(10)\n",
@@ -225,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "id": "74a656af-33ce-4b43-b21e-0110dc292e41",
    "metadata": {},
    "outputs": [],
@@ -236,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "id": "092218ed-9263-4ac3-9967-e0c4df41f88c",
    "metadata": {},
    "outputs": [
@@ -246,7 +248,7 @@
        "9445"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "id": "42a89daa-a68c-4023-b03d-0f68b9f19a2c",
    "metadata": {},
    "outputs": [],
@@ -267,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "id": "bb0e3947-d028-4433-b66e-07c2c99fce31",
    "metadata": {},
    "outputs": [
@@ -277,7 +279,7 @@
        "9445"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "id": "aeadc0d5-3298-4011-b5dc-d7d892e83e7e",
    "metadata": {
     "tags": []
@@ -300,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "id": "11153ca4-948a-42b0-b06a-34d8f40b0bf8",
    "metadata": {},
    "outputs": [],
@@ -320,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "id": "aea17f9e-b9b4-4b28-87d4-f34419ad1851",
    "metadata": {},
    "outputs": [],
@@ -370,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "id": "1a8c3b45-1523-4450-b15b-0fceadea6ae4",
    "metadata": {},
    "outputs": [],
@@ -383,11 +385,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "0483562e-3326-4241-a036-8a7b0faafdfb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_cost_filtered.to_csv(\"results-raw.csv\", index=False)"
+   ]
   },
   {
    "cell_type": "code",
